--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@ Here is the main HTML where handlebars will render to
 <html lang="en">
 	<head>
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>MVC With Cats!</title>
+		<title>Been There Done That!</title>
 	</head>
 	<body>
 		<p>
