--- a/views/btdts/index.handlebars
+++ b/views/btdts/index.handlebars
@@ -2,6 +2,9 @@
 <!-- Edit hte indextemplate.handlebars and the burgers_controller -->
  <!-- BTDT <- change this from burges -->
 
+<!-- Index.Handlebars calls from the controllers file? -->
+
+<!-- Model.js calls from teh table schema? -->
 
 <h1>Been There Done That!</h1>
 
