updated files without project management layout

--- a/views/btdts/stepTwoHandlebars.html
+++ b/views/btdts/stepTwoHandlebars.html
@@ -1,6 +1,9 @@
 
 <!-- Template For Been There Done That, for Step 2-->
+<!-- Update this based on the API -->
 <ul>
+
+<!-- update this to the respective controller -->
   {{#each btdts}}
     {{#if this.yelp_id}}
      
@@ -26,8 +29,11 @@
 		<div class="col-md-4">
 			<h2>
 				Brooklyn Park
+				<!-- this.yelpname (changet this based on teh field name) -->
 			</h2>
 			<p>
+					<!-- this.yelpd desription of the place (changet this based on teh field name) -->
+
 				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
 			</p>
 			<p>
@@ -40,8 +46,11 @@
 		<div class="col-md-4">
 			<h2>
 				Socrates (Astoria) Park
+					<!-- this.yelpname (changet this based on teh field name) -->
 			</h2>
 			<p>
+					<!-- this.yelpd desription of the place (changet this based on teh field name) -->
+
 				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
 			</p>
 			<p>
@@ -54,8 +63,10 @@
 		<div class="col-md-4">
 			<h2>
 				Washington Square Park
+					<!-- this.yelpname (changet this based on teh field name) -->
 			</h2>
 			<p>
+					<!-- this.yelpd desription of the place (changet this based on teh field name) -->
 				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
 			</p>
 			<p>
@@ -67,6 +78,10 @@
 		</div>
 	</div>
 </div>
+
+
+<!-- update the hrfe -->
+<!-- make a controller (based on whichever button person clicks) and then redirect them to step 3 in the controlelr (make a route) -->
 
 
     {{/if}}
