--- a/views/btdts/stepOneHandlebars.html
+++ b/views/btdts/stepOneHandlebars.html
@@ -31,10 +31,16 @@
 
 <!-- Text input-->
 <div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">Name a place that you have been before.</label>  
+  <label class="col-md-4 control-label" for="textinput">Select a place that you want to go to.</label>  
   <div class="col-md-4">
-  <input id="textinput" name="textinput" type="text" placeholder="Grimaldi's" class="form-control input-md">
-  <span class="help-block">We will help you find similar places!</span>  
+<div class="col-md-4">
+    <select id="selectbasic" name="selectbasic" class="form-control">
+      <option value="Bars">Bars</option>
+       <option value="Museums">Museums</option>
+      <option value="Nightlife">Nightlife</option>
+      <option value="Parks">Parks</option>
+     <option value="Restaurants">Restaurants</option>
+    </select> 
   </div>
 </div>
 
