--- a/views/btdts/stepThreeHandlebars.html
+++ b/views/btdts/stepThreeHandlebars.html
@@ -9,7 +9,10 @@
 			</h3>
 			<div class="jumbotron">
 				<p>
-					<span>Thanks for choosing Brooklyn Park. We have directions below for you based on your current location.</span><a class="btn btn-primary btn-large" href="#">Learn more</a>
+					<span>Thanks for choosing 
+<!-- make a controll -->
+<!-- change this based on what the person selected from step 2 (button on click, retrieve the data)-->
+					Brooklyn Park. We have directions below for you based on your current location.</span><a class="btn btn-primary btn-large" href="#">Learn more</a>
 				</p>
 			</div>
 		</div>
