removed Locate Me

--- a/views/btdts/steponehandlebarsrevised.handlebars
+++ b/views/btdts/steponehandlebarsrevised.handlebars
@@ -22,7 +22,7 @@
 
 <!-- First Question: Please type in a location-->
 
-<h2> Step 1: Please type in a location or click GPS Locate Me</h2>
+<h2> Step 1: Please type in a location or click GPS</h2>
 <div class="form-group">
   <label class="col-md-4 control-label" for="location"> Location</label>
   <div class="col-md-4">
